[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/script/LoginView.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/font/Akira Expanded Demo.otf"

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Assets/font/ArialMdm.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[sub_resource type="InputEventAction" id=9]
action = "enter"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[node name="LoginView" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 50
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 50.0
margin_right = 999.0
margin_bottom = 551.0
custom_constants/separation = 150

[node name="GameTitle" type="Label" parent="VBox"]
margin_right = 974.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 6 )
text = "wasted in outta space"
align = 1

[node name="Margin" type="MarginContainer" parent="VBox"]
margin_top = 193.0
margin_right = 974.0
margin_bottom = 292.0
custom_constants/margin_right = 400
custom_constants/margin_left = 400

[node name="VBox" type="VBoxContainer" parent="VBox/Margin"]
margin_left = 400.0
margin_right = 574.0
margin_bottom = 99.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLineEdit" type="LineEdit" parent="VBox/Margin/VBox"]
margin_right = 174.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 8 )
align = 1
max_length = 24
placeholder_text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLineEdit" type="LineEdit" parent="VBox/Margin/VBox"]
margin_top = 37.0
margin_right = 174.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 8 )
align = 1
max_length = 24
secret = true
placeholder_text = "password"

[node name="Center" type="CenterContainer" parent="VBox/Margin/VBox"]
margin_top = 74.0
margin_right = 174.0
margin_bottom = 99.0

[node name="enterButton" type="Button" parent="VBox/Margin/VBox/Center"]
margin_left = 63.0
margin_right = 110.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 8 )
shortcut = SubResource( 10 )
text = "enter"
[connection signal="pressed" from="VBox/Margin/VBox/Center/enterButton" to="." method="_on_enterButton_pressed"]
